--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
     </div>
   </section>
-  <section class="features">
+  <section class="section features">
     <div class="container">
       <h2 hidden>Features</h2>
       <ul class="features-list">
@@ -85,7 +85,7 @@
     </div>
   </section>
 
-  <section class="team">
+  <section class="section team">
     <div class="container">
       <h2 class="section-title">Our Team</h2>
 
@@ -125,7 +125,7 @@
     </div>
   </section>
 
-  <section class="portfolio">
+  <section class="section portfolio">
     <div class="container">
       <h2 class="section-title">Our Portfolio</h2>
 
