--- a/index.html
+++ b/index.html
@@ -1,194 +1,198 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>WebStudio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-    rel="stylesheet"
-  />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/styles.css" />
-</head>
-<body>
-<header class="header">
-  <div class="container">
-    <div class="header-content">
-      <nav class="nav">
-        <a class="header-logo" href="/"><span class="header-logo-color">Web</span>Studio</a>
-        <ul class="nav-menu">
-          <li class="nav-menu-item">
-            <a class="nav-menu-link is-active" href="#">Studio</a>
-          </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link" href="#">Portfolio</a>
-          </li>
-          <li class="nav-menu-item">
-            <a class="nav-menu-link" href="#">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul class="header-contacts">
-          <li class="header-contacts-item">
-            <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="header-contacts-item">
-            <a class="header-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
-    </div>
-  </div>
-</header>
-
-<main>
-  <section class="hero">
-    <div class="container">
-      <div class="hero-content">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="btn" type="button">Order Service</button>
+  <head>
+    <meta charset="UTF-8" />
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+  </head>
+  <body>
+    <header class="header">
+      <div class="container header-content">
+        <nav class="nav">
+          <a class="header-logo" href="/"><span class="header-logo-color">Web</span>Studio</a>
+          <ul class="nav-menu">
+            <li class="nav-menu-item">
+              <a class="nav-menu-link is-active" href="#">Studio</a>
+            </li>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="#">Portfolio</a>
+            </li>
+            <li class="nav-menu-item">
+              <a class="nav-menu-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address>
+          <ul class="header-contacts">
+            <li class="header-contacts-item">
+              <a class="header-contacts-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="header-contacts-item">
+              <a class="header-contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
       </div>
-    </div>
-  </section>
-  <section class="section features">
-    <div class="container">
-      <h2 hidden>Features</h2>
-      <ul class="features-list">
-        <li class="features-item">
-          <h3 class="features-title">Strategy</h3>
-          <p class="features-description">
-            Our goal is to identify the business problem to walk away with the perfect and creative solution.
-          </p>
-        </li>
-        <li class="features-item">
-          <h3 class="features-title">Punctuality</h3>
-          <p class="features-description">
-            Bring the key message to the brand's audience for the best price within the shortest possible time.
-          </p>
-        </li>
-        <li class="features-item">
-          <h3 class="features-title">Diligence</h3>
-          <p class="features-description">
-            Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-          </p>
-        </li>
-        <li class="features-item">
-          <h3 class="features-title">Technologies</h3>
-          <p class="features-description">
-            Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-          </p>
-        </li>
-      </ul>
-    </div>
-  </section>
+    </header>
 
-  <section class="section team">
-    <div class="container">
-      <h2 class="section-title">Our Team</h2>
-
-      <ul class="team-list">
-        <li class="team-item">
-          <img src="./images/img-1.jpg" width="264" alt="photo product designer" />
-          <div class="team-item-content">
-            <h3 class="team-title">Mark Guerrero</h3>
-            <p class="team-description">Product Designer</p>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="hero-content">
+            <h1 class="hero-title">Effective Solutions for Your Business</h1>
+            <button class="btn" type="button">Order Service</button>
           </div>
-        </li>
+        </div>
+      </section>
+      <section class="section features">
+        <div class="container">
+          <h2 hidden>Features</h2>
+          <ul class="features-list">
+            <li class="features-item">
+              <h3 class="features-title">Strategy</h3>
+              <p class="features-description">
+                Our goal is to identify the business problem to walk away with the perfect and creative solution.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Punctuality</h3>
+              <p class="features-description">
+                Bring the key message to the brand's audience for the best price within the shortest possible time.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Diligence</h3>
+              <p class="features-description">
+                Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="features-item">
+              <h3 class="features-title">Technologies</h3>
+              <p class="features-description">
+                Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <li class="team-item">
-          <img src="./images/img-2.jpg" width="264" alt="photo frontend developer" />
-          <div class="team-item-content">
-            <h3 class="team-title">Tom Ford</h3>
-            <p class="team-description">Frontend Developer</p>
-          </div>
-        </li>
+      <section class="section team">
+        <div class="container">
+          <h2 class="section-title">Our Team</h2>
 
-        <li class="team-item">
-          <img src="./images/img-3.jpg" width="264" alt="photo marketing team member" />
-          <div class="team-item-content">
-            <h3 class="team-title">Camila Garcia</h3>
-            <p class="team-description">Marketing</p>
-          </div>
-        </li>
+          <ul class="team-list">
+            <li class="team-item">
+              <img src="./images/img-1.jpg" width="264" alt="photo product designer" />
+              <div class="team-item-content">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-description">Product Designer</p>
+              </div>
+            </li>
 
-        <li class="team-item">
-          <img src="./images/img-4.jpg" width="264" alt="photo ui designer" />
-          <div class="team-item-content">
-            <h3 class="team-title">Daniel Wilson</h3>
-            <p class="team-description">UI Designer</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </section>
+            <li class="team-item">
+              <img src="./images/img-2.jpg" width="264" alt="photo frontend developer" />
+              <div class="team-item-content">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-description">Frontend Developer</p>
+              </div>
+            </li>
 
-  <section class="section portfolio">
-    <div class="container">
-      <h2 class="section-title">Our Portfolio</h2>
+            <li class="team-item">
+              <img src="./images/img-3.jpg" width="264" alt="photo marketing team member" />
+              <div class="team-item-content">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-description">Marketing</p>
+              </div>
+            </li>
 
-      <ul class="portfolio-list">
-        <li class="portfolio-item">
-          <img src="./images/portfolio/img-5.jpg" width="360" alt="Banking App" />
-          <div class="portfolio-item-content">
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-description">App</p>
-          </div>
-        </li>
+            <li class="team-item">
+              <img src="./images/img-4.jpg" width="264" alt="photo ui designer" />
+              <div class="team-item-content">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-description">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
 
-        <li class="portfolio-item">
-          <img src="./images/portfolio/img-4.jpg" width="360" alt="Cashless Payment" />
-          <div class="portfolio-item-content">
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-description">Marketing</p>
-          </div>
-        </li>
+      <section class="section portfolio">
+        <div class="container">
+          <h2 class="section-title">Our Portfolio</h2>
 
-        <li class="portfolio-item">
-          <img src="./images/portfolio/img-3.jpg" width="360" alt="Meditation App" />
-          <div class="portfolio-item-content">
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-description">App</p>
-          </div>
-        </li>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img src="./images/portfolio/img-5.jpg" width="360" alt="Banking App" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-description">App</p>
+              </div>
+            </li>
 
-        <li class="portfolio-item">
-          <img src="./images/portfolio/img-2.jpg" width="360" alt="Taxi Service" />
-          <div class="portfolio-item-content">
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-description">Marketing</p>
-          </div>
-        </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio/img-4.jpg" width="360" alt="Cashless Payment" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-description">Marketing</p>
+              </div>
+            </li>
 
-        <li class="portfolio-item">
-          <img src="./images/portfolio/img-1.jpg" width="360" alt="Screen Illustrations" />
-          <div class="portfolio-item-content">
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-description">Design</p>
-          </div>
-        </li>
+            <li class="portfolio-item">
+              <img src="./images/portfolio/img-3.jpg" width="360" alt="Meditation App" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-description">App</p>
+              </div>
+            </li>
 
-        <li class="portfolio-item">
-          <img src="./images/portfolio/img-6.jpg" width="360" alt="Online Courses" />
-          <div class="portfolio-item-content">
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-description">Marketing</p>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </section>
-</main>
+            <li class="portfolio-item">
+              <img src="./images/portfolio/img-2.jpg" width="360" alt="Taxi Service" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-description">Marketing</p>
+              </div>
+            </li>
 
-<footer class="footer">
-  <div class="container">
-    <a class="footer-logo" href="/"><span class="footer-logo-color">Web</span>Studio</a>
-    <p class="footer-text">
-      Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-    </p>
-  </div>
-</footer>
-</body>
+            <li class="portfolio-item">
+              <img src="./images/portfolio/img-1.jpg" width="360" alt="Screen Illustrations" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-description">Design</p>
+              </div>
+            </li>
+
+            <li class="portfolio-item">
+              <img src="./images/portfolio/img-6.jpg" width="360" alt="Online Courses" />
+              <div class="portfolio-item-content">
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-description">Marketing</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <a class="footer-logo" href="/"><span class="footer-logo-color">Web</span>Studio</a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
