--- a/index.html
+++ b/index.html
@@ -51,15 +51,13 @@
     <main>
       <section class="hero">
         <div class="container">
-          <div class="hero-content">
-            <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button class="btn" type="button">Order Service</button>
-          </div>
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="btn" type="button">Order Service</button>
         </div>
       </section>
       <section class="section features">
         <div class="container">
-          <h2 hidden>Features</h2>
+          <h2 class="section-title visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="features-item">
               <h3 class="features-title">Strategy</h3>
