update logo path

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <header class="header">
       <div class="container header-content">
         <nav class="nav">
-          <a class="header-logo" href="/"><span class="header-logo-color">Web</span>Studio</a>
+          <a class="header-logo" href="./index.html"><span class="header-logo-color">Web</span>Studio</a>
           <ul class="nav-menu">
             <li class="nav-menu-item">
-              <a class="nav-menu-link is-active" href="#">Studio</a>
+              <a class="nav-menu-link is-active" href="./index.html">Studio</a>
             </li>
             <li class="nav-menu-item">
               <a class="nav-menu-link" href="#">Portfolio</a>
@@ -186,7 +186,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="/"><span class="footer-logo-color">Web</span>Studio</a>
+        <a class="footer-logo" href="./index.html"><span class="footer-logo-color">Web</span>Studio</a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
